# teensy

./: .gitignore  Cargo.toml  Makefile  README.md  configure.sh  layout.ld
.cargo/: config
.github/workflows/: rust.yml
examples/: blink.rs  blink_dynamic_clocks.rs  blink_manual_init.rs  connect_pin_to_led.rs  panic_blink.rs  panic_uart.rs  read_uart.rs  uart.rs
src/: boot.rs  interrupts.rs  lib.rs  main.rs  mcg.rs  osc.rs  panic.rs  port.rs  sim.rs  sleep.rs  uart.rs  usb_serial.rs  watchdog.rs
src/port/: gpio.rs  macros.rs  mod.rs  pin.rs  port.rs
