[package]
name = "teensy"
version = "0.0.0"
categories = ["embedded", "no-std"]
authors = [
	"Thomas Campistron <irevoire@hotmail.fr>",
	"Debilausaure",
]
edition = "2018"

[dependencies]
volatile = "0.2.7"
bit_field = "0.10.1"
mk20d7 = { git = "https://github.com/debilausaure/MK20D7" }
embedded-hal = "1.0.0-alpha.1"

[features]
default = []
manual_init = []

[[example]]
name = "blink_manual_init"
required-features = ["manual_init"]
